fix(top-bar): banner to small on mobile

--- a/src/app/components/top-bar/top-bar.component.scss
+++ b/src/app/components/top-bar/top-bar.component.scss
@@ -24,6 +24,7 @@ mat-toolbar {
 
     .logo {
       width: 40px;
+      height: 40px;
     }
   }
 
